web config change for license

--- a/SalesForceAutomation/Web.config
+++ b/SalesForceAutomation/Web.config
@@ -30,6 +30,8 @@
 	  <add key="LicenseURL" value="https://license.dev-ts.online/API/License/GetLicenseDetails"/>
 	  <add key="LicenseKey" value="lWnXQTujzOO+47+I+R2DwPGbRpUjc6YrKrHTXU0ajIU="/>
 	  <add key="DeffPass" value="User#123"/>
+	  <add key="LicenseURL" value="https://license.dev-ts.online/API/License/GetLicenseDetails"/>
+	  <add key="LicenseKey" value="lWnXQTujzOO+47+I+R2DwPGbRpUjc6YrKrHTXU0ajIU="/>
   </appSettings>
   <connectionStrings>
 	  <add name="ApplicationServices" connectionString="server=93.177.125.163,101; uid=sa; pwd=Meliha2024; database=SFA_DEV; Language=British;max pool size=200;" />
