--- a/SalesForceAutomation/Web.config
+++ b/SalesForceAutomation/Web.config
@@ -51,8 +51,9 @@
     <httpRuntime targetFramework="4.0" maxRequestLength="107374100" requestValidationMode="2.0" />
     <authentication mode="Forms">
       <!--<forms loginUrl="~/Login.aspx" timeout="2880" defaultUrl="~/Admin/AdminDashboard.aspx"  />-->
-      <forms loginUrl="~/Login.aspx" timeout="2880" defaultUrl="~/Admin/AdminDashboard.aspx" />
+     <!-- <forms loginUrl="~/Login.aspx" timeout="2880" defaultUrl="~/Admin/AdminDashboard.aspx" />-->
       <!--<forms loginUrl="~/Login.aspx" timeout="2880" defaultUrl="~/Admin/UserRoles.aspx" />-->
+		<forms loginUrl="~/SignIn.aspx" timeout="2880" defaultUrl="~BO_Digits/ChartDashboard.aspx" />
     </authentication>
     <membership>
       <providers>
